log
Wed 15 Mar 2023 07:19:51 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:4: error: expected expression before ‘=’ token
   18 | a* = *b;
      |    ^
Compilation failed
09581c4
Wed 15 Mar 2023 07:19:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
31b9ee9
Wed 15 Mar 2023 07:20:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:1: error: invalid type argument of unary ‘*’ (have ‘int’)
   17 | *aux = *a;
      | ^~~~
exercises.c:19:6: error: invalid type argument of unary ‘*’ (have ‘int’)
   19 | *a = *aux;
      |      ^~~~
Compilation failed
ba3a80d
Wed 15 Mar 2023 07:23:26 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   18 | a = *b;
      |   ^
exercises.c:19:3: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 | a = aux;
      |   ^
cc1: all warnings being treated as errors
Compilation failed
dd631ec
Wed 15 Mar 2023 07:23:51 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   18 | a = *b;
      |   ^
exercises.c:19:3: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 | a = *aux;
      |   ^
exercises.c:17:6: error: ‘aux’ is used uninitialized [-Werror=uninitialized]
   17 | *aux = *a;
      | ~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
d33019b
Wed 15 Mar 2023 07:25:24 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
c9d03bd
Wed 15 Mar 2023 07:38:43 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:6: error: statement with no effect [-Werror=unused-value]
   29 |   min[0];
      |   ~~~^~~
exercises.c:30:6: error: statement with no effect [-Werror=unused-value]
   30 |   max[0];
      |   ~~~^~~
exercises.c:34:1: error: expected expression before ‘}’ token
   34 | }
      | ^
exercises.c: In function ‘crearPersona’:
exercises.c:56:5: error: ‘persona’ undeclared (first use in this function); did you mean ‘Persona’?
   56 |     persona.edad[i] = p;
      |     ^~~~~~~
      |     Persona
exercises.c:56:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:55:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   55 |   for (int i = 0 ; i < 0 ; i++)
      |   ^~~
exercises.c:57:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   57 |     persona.rut[i] = p;
      |     ^~~~~~~
exercises.c:57:17: error: ‘i’ undeclared (first use in this function)
   57 |     persona.rut[i] = p;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
e1d15b1
Wed 15 Mar 2023 07:38:53 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:52:5: error: ‘persona’ undeclared (first use in this function); did you mean ‘Persona’?
   52 |     persona.edad[i] = p;
      |     ^~~~~~~
      |     Persona
exercises.c:52:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:51:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   51 |   for (int i = 0 ; i < 0 ; i++)
      |   ^~~
exercises.c:53:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   53 |     persona.rut[i] = p;
      |     ^~~~~~~
exercises.c:53:17: error: ‘i’ undeclared (first use in this function)
   53 |     persona.rut[i] = p;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
0ff1352
Wed 15 Mar 2023 07:39:09 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:52:5: error: expected expression before ‘Persona’
   52 |     Persona.edad[i] = p;
      |     ^~~~~~~
exercises.c:51:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   51 |   for (int i = 0 ; i < 0 ; i++)
      |   ^~~
exercises.c:53:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   53 |     Persona.rut[i] = p;
      |     ^~~~~~~
exercises.c:53:12: error: expected identifier or ‘(’ before ‘.’ token
   53 |     Persona.rut[i] = p;
      |            ^
exercises.c:54:12: error: expected identifier or ‘(’ before ‘.’ token
   54 |     Persona.edad = p;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
1ff76bc
